<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/interval_16">

    <android.support.v7.widget.CardView
        android:id="@+id/activity_main_suggest_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="@dimen/interval_8"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:clickable="false"
            android:orientation="vertical"
            android:padding="@dimen/interval_8">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/suggest_contact"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="false"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:clickable="false"
                    android:src="@drawable/ic_account"
                    app:border_color="@color/brown_600"
                    app:border_width="2dp"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/interval_16">

                    <TextView
                        android:id="@+id/activity_main_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/interval_8"
                        android:clickable="false"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/name"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <TextView
                        android:id="@+id/activity_main_recent_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/recent_connect"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Spinner
        android:id="@+id/activity_main_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/interval_4"
        android:layout_weight="2"
        android:clickable="false">

        <TextView
            android:id="@+id/activity_main_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:drawableTop="@drawable/ic_error"
            android:text="표시할 내용이 없습니다."/>

        <ListView
            android:id="@+id/activity_main_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:listitem="@layout/item_contact"/>
    </FrameLayout>
</LinearLayout>